@@ -3,7 +3,14 @@ extends =
     http://dist.plone.org/release/3.3.5/versions.cfg
     base.cfg
 
+eggs +=
+    zope.testbrowser<3.5dev
+    zope.testing<3.7dev
+    zope.app.testing<3.5dev
 parts += zope2
+parts -=
+    test
+    test-pt
 
 [zope2]
 recipe = plone.recipe.zope2install
@@ -11,12 +18,10 @@ url = ${versions:zope2-url}
 skip-fake-eggs =
     zope.testing
     zope.testbrowser
+    zope.app.testing
 
 [instance]
 zope2-location = ${zope2:location}
-
-[test]
-extra-paths = ${zope2:location}/lib/python
 
 [packages]
 packages = ${zope2:location}/lib/python ./
