@@ -1,0 +1,70 @@
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xml:lang="en" lang="en"
+      i18n:domain="plone"
+      metal:use-macro="here/main_template/macros/master">
+
+  <head>
+      <metal:block fill-slot="top_slot">
+        <tal:insert tal:replace="nothing"
+              tal:define="dummy python:request.set('enable_border', 1)" />
+      </metal:block>
+  </head>
+
+  <body>
+
+    <div metal:fill-slot="main">
+      <div tal:replace="structure provider:plone.abovecontenttitle" />
+
+      <h1 class="documentFirstHeading"> 
+          <tal:block condition="exists:here/aq_explicit/widget">
+              <metal:field use-macro="python:here.widget('title', mode='view')">
+              Title
+              </metal:field>
+          </tal:block>
+          <tal:block condition="not:exists:here/aq_explicit/widget">
+              <tal:block replace="structure view/icon" /> 
+              <span tal:content="view/title" tal:omit-tag="">Directory Id</span>
+          </tal:block>
+      </h1>
+
+      <div tal:replace="structure provider:plone.belowcontenttitle" />
+
+      <a href=""
+         class="link-parent"
+         tal:define="parent_url view/parent_url"
+         tal:condition="parent_url"
+         tal:attributes="href string:${parent_url}/folder_contents"
+         i18n:translate="go_to_parent_url">
+          Up one level
+      </a>
+
+      <p class="documentDescription" tal:condition="exists:here/aq_explicit/widget">
+          <metal:field use-macro="python:here.widget('description', mode='view')">
+              Description
+          </metal:field>
+      </p>
+
+      <tal:block condition="not:exists:here/aq_explicit/widget">
+          <p class="documentDescription" 
+                     tal:content="context/Description" 
+                     tal:condition="context/Description"> 
+              Description
+          </p>
+      </tal:block>
+
+      <form name="folderContentsForm"
+            method="post"
+            action="folder_object"
+            tal:attributes="action context/absolute_url"
+            class="kssattr-serveraction-foldercontents_update_table">
+        <div tal:replace="structure view/contents_table"></div>
+        <input tal:replace="structure context/@@authenticator/authenticator" />
+      </form>
+    </div>
+
+
+  </body>
+</html>
