@@ -5,7 +5,6 @@
  <property name="title" i18n:translate="">Collection</property>
  <property name="description"
      i18n:translate="">An automatically updated stored search that can be used to display items matching criteria you specify.</property>
- <property name="icon_expr"></property>
  <property name="content_meta_type">Topic</property>
  <property name="product">collective.formcriteria</property>
  <property name="factory">addTopic</property>
